# neuraos

./: CHANGELOG.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml  env.example  undefined
config/: default.toml
crates/neuraos-agents/: Cargo.toml
crates/neuraos-agents/src/: builder.rs  catalog.rs  executor.rs  lib.rs  registry.rs  tests.rs
crates/neuraos-api/: Cargo.toml
crates/neuraos-api/src/: error.rs  lib.rs  middleware.rs  router.rs  state.rs  ws.rs
crates/neuraos-api/src/handlers/: agents.rs  health.rs  memory.rs  mod.rs  tasks.rs  tools.rs
crates/neuraos-bin/: Cargo.toml
crates/neuraos-bin/src/: main.rs
crates/neuraos-channels/: Cargo.toml
crates/neuraos-channels/src/: lib.rs
crates/neuraos-cli/: Cargo.toml
crates/neuraos-cli/src/: cli.rs  client.rs  main.rs  output.rs
crates/neuraos-cli/src/commands/: agent.rs  chat.rs  config.rs  memory.rs  mod.rs  task.rs  tool.rs
crates/neuraos-config/: Cargo.toml
crates/neuraos-config/src/: env.rs  lib.rs  loader.rs  schema.rs
crates/neuraos-desktop/: Cargo.toml
crates/neuraos-desktop/src/: lib.rs
crates/neuraos-dsl/: Cargo.toml
crates/neuraos-dsl/src/: lib.rs
crates/neuraos-extensions/: Cargo.toml
crates/neuraos-extensions/src/: lib.rs
crates/neuraos-kernel/: Cargo.toml
crates/neuraos-kernel/src/: budget.rs  circuit_breaker.rs  event_bus.rs  lib.rs  planner.rs  rbac.rs  scheduler.rs
crates/neuraos-llm/: Cargo.toml
crates/neuraos-llm/src/: cache.rs  lib.rs  optimizer.rs  router.rs  streaming.rs
crates/neuraos-llm/src/providers/: anthropic.rs  deepseek.rs  google.rs  groq.rs  mistral.rs  mod.rs  ollama.rs  openai.rs  together.rs
crates/neuraos-memory/: Cargo.toml
crates/neuraos-memory/src/: consolidator.rs  episodic.rs  graph.rs  lib.rs  semantic.rs  store.rs  vector.rs
crates/neuraos-migrate/: Cargo.toml
crates/neuraos-migrate/src/: lib.rs
crates/neuraos-plugins/: Cargo.toml
crates/neuraos-plugins/src/: lib.rs
crates/neuraos-runtime/: Cargo.toml
crates/neuraos-runtime/src/: executor.rs  handle.rs  lib.rs  lifecycle.rs  task.rs  worker.rs
crates/neuraos-shield/: Cargo.toml
crates/neuraos-shield/src/: audit.rs  auth.rs  crypto.rs  lib.rs  policy.rs  sandbox.rs
crates/neuraos-skills/: Cargo.toml
crates/neuraos-skills/src/: lib.rs
crates/neuraos-telemetry/: Cargo.toml
crates/neuraos-telemetry/src/: lib.rs
crates/neuraos-tools/src/: builtin.rs  executor.rs  lib.rs  registry.rs  schema.rs
crates/neuraos-types/: Cargo.toml
crates/neuraos-types/src/: agent.rs  config.rs  error.rs  event.rs  id.rs  lib.rs  llm.rs  memory.rs  message.rs  task.rs  tool.rs
crates/neuraos-wings/: Cargo.toml
crates/neuraos-wings/src/: lib.rs
crates/neuraos-wire/: Cargo.toml
crates/neuraos-wire/src/: lib.rs
xtask/: Cargo.toml
xtask/src/: main.rs
