[package]
name        = "neuraos-agents"
description = "Pre-built agent library: 10 domain-specialist agents with full manifests"
version.workspace    = true
edition.workspace    = true
rust-version.workspace = true
license.workspace    = true

[dependencies]
neuraos-types = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
