[package]
name = "neuraos-api"
version = "0.1.0"
edition = "2021"
description = "NeuraOS HTTP/WebSocket API server"
license = "MIT"

[dependencies]
neuraos-types   = { path = "../neuraos-types" }
neuraos-kernel  = { path = "../neuraos-kernel" }
neuraos-agents  = { path = "../neuraos-agents" }
neuraos-memory  = { path = "../neuraos-memory" }
neuraos-tools   = { path = "../neuraos-tools" }
neuraos-shield  = { path = "../neuraos-shield" }
tokio           = { version = "1", features = ["full"] }
axum            = { version = "0.7", features = ["ws", "macros"] }
axum-extra      = { version = "0.9", features = ["typed-header"] }
tower           = "0.4"
tower-http      = { version = "0.5", features = ["cors", "trace", "compression-gzip"] }
async-trait     = "0.1"
tracing         = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror       = "1"
serde           = { version = "1", features = ["derive"] }
serde_json      = "1"
uuid            = { version = "1", features = ["v4"] }
chrono          = { version = "0.4", features = ["serde"] }
dashmap         = "5"
futures         = "0.3"
tokio-stream    = "0.1"
