[package]
name = "neuraos-bin"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "NeuraOS server binary"

[[bin]]
name = "neuraos"
path = "src/main.rs"

[dependencies]
neuraos-kernel    = { path = "../neuraos-kernel" }
neuraos-wire      = { path = "../neuraos-wire" }
neuraos-telemetry = { path = "../neuraos-telemetry" }
tokio             = { workspace = true }
anyhow            = { workspace = true }
clap              = { workspace = true }
toml              = { workspace = true }
tracing           = "0.1"
