[package]
name = "neuraos-channels"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Channel adapters: Slack, Discord, Telegram, WhatsApp, email, and more"

[dependencies]
neuraos-types  = { path = "../neuraos-types" }
serde          = { workspace = true }
serde_json     = { workspace = true }
tokio          = { workspace = true }
async-trait    = { workspace = true }
anyhow         = { workspace = true }
thiserror      = { workspace = true }
tracing        = "0.1"
reqwest        = { workspace = true }
