[package]
name = "neuraos-channels"
version = "0.1.0"
edition = "2021"
description = "Multi-channel communication layer for NeuraOS (Slack, Discord, Telegram, Email, Webhook)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ajul8866/neuraos"

[dependencies]
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
