[package]
name        = "neuraos-cli"
description = "CLI for NeuraOS — spawn agents, manage tasks, query memory, run tools"
version.workspace    = true
edition.workspace    = true
rust-version.workspace = true
license.workspace    = true

[[bin]]
name = "neura"
path = "src/main.rs"

[dependencies]
neuraos-types  = { workspace = true }
neuraos-config = { workspace = true }
tokio          = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
reqwest        = { workspace = true }
clap           = { workspace = true }
tracing        = { workspace = true }
tracing-subscriber = { workspace = true }
colored        = { workspace = true }
indicatif      = { workspace = true }
tabled         = { workspace = true }
