[package]
name = "neuraos-cli"
version = "0.1.0"
edition = "2021"
description = "NeuraOS CLI - command-line interface for interacting with the NeuraOS agent platform"

[[bin]]
name = "neuraos"
path = "src/main.rs"

[dependencies]
neuraos-types   = { path = "../neuraos-types" }
neuraos-kernel  = { path = "../neuraos-kernel" }
neuraos-agents  = { path = "../neuraos-agents" }
neuraos-config  = { path = "../neuraos-config" }
tokio           = { version = "1", features = ["full"] }
clap            = { version = "4", features = ["derive"] }
serde           = { version = "1", features = ["derive"] }
serde_json      = "1"
anyhow          = "1"
tracing         = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
colored         = "2"
indicatif       = "0.17"
dialoguer       = "0.11"
reqwest         = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
