[package]
name = "neuraos-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Configuration management for NeuraOS"

[dependencies]
neuraos-types = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
serde_yaml   = { workspace = true }
toml         = { workspace = true }
anyhow       = { workspace = true }
thiserror    = { workspace = true }
tokio        = { workspace = true }
tracing      = { workspace = true }
config       = { workspace = true }
notify       = { workspace = true }
