[package]
name = "neuraos-config"
version = "0.1.0"
edition = "2021"
description = "NeuraOS Config - configuration loading, validation, and environment management"

[dependencies]
neuraos-types = { path = "../neuraos-types" }
serde         = { version = "1", features = ["derive"] }
serde_json    = "1"
toml          = "0.8"
anyhow        = "1"
thiserror     = "1"
tracing       = "0.1"
config        = { version = "0.14", features = ["toml"] }
dotenvy       = "0.15"
once_cell     = "1"
