[package]
name = "neuraos-desktop"
version = "0.1.0"
edition = "2021"
description = "Native desktop integration for NeuraOS (tray, notifications, windows)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ajul8866/neuraos"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
