[package]
name = "neuraos-dsl"
version = "0.1.0"
edition = "2021"
description = "Domain-specific language for NeuraOS agent workflows and pipelines"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ajul8866/neuraos"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
thiserror = "1"
anyhow = "1"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
