[package]
name = "neuraos-kernel"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Core kernel: planner, scheduler, event bus, RBAC, circuit breaker, budget"

[dependencies]
neuraos-types  = { workspace = true }
neuraos-config = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
tokio          = { workspace = true }
tokio-stream   = { workspace = true }
async-trait    = { workspace = true }
anyhow         = { workspace = true }
thiserror      = { workspace = true }
tracing        = { workspace = true }
dashmap        = { workspace = true }
parking_lot    = { workspace = true }
uuid           = { workspace = true }
chrono         = { workspace = true }
