[package]
name = "neuraos-kernel"
version = "0.1.0"
edition = "2021"
description = "NeuraOS Kernel - core orchestration engine for agent lifecycle, scheduling, and event routing"

[dependencies]
neuraos-types  = { path = "../neuraos-types" }
neuraos-config = { path = "../neuraos-config" }
tokio          = { version = "1", features = ["full"] }
serde          = { version = "1", features = ["derive"] }
serde_json     = "1"
anyhow         = "1"
thiserror      = "1"
tracing        = "0.1"
uuid           = { version = "1", features = ["v4"] }
chrono         = { version = "0.4", features = ["serde"] }
dashmap        = "5"
tokio-stream   = "0.1"
futures        = "0.3"
async-trait    = "0.1"
priority-queue = "1"
