[package]
name = "neuraos-shield"
version = "0.1.0"
edition = "2021"
description = "NeuraOS security, sandboxing, and policy enforcement"
license = "MIT"

[dependencies]
neuraos-types = { path = "../neuraos-types" }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
tracing = "0.1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "5"
sha2 = "0.10"
hmac = "0.12"
base64 = "0.21"
jsonwebtoken = "9"
regex = "1"
ipnet = "2"
