[package]
name        = "neuraos-types"
description = "Core types, errors, taint tracking, Ed25519 identities, model catalog"
version.workspace    = true
edition.workspace    = true
rust-version.workspace = true
license.workspace    = true

[dependencies]
serde        = { workspace = true }
serde_json   = { workspace = true }
thiserror    = { workspace = true }
uuid         = { workspace = true }
ulid         = { workspace = true }
chrono       = { workspace = true }
bitflags     = { workspace = true }
strum        = { workspace = true }
derive_more  = { workspace = true }
indexmap     = { workspace = true }
smallvec     = { workspace = true }
bytes        = { workspace = true }
ed25519-dalek = { workspace = true }
zeroize      = { workspace = true }
secrecy      = { workspace = true }
blake3       = { workspace = true }
base64       = { workspace = true }
hex          = { workspace = true }
url          = { workspace = true }
mime         = { workspace = true }
humantime    = { workspace = true }
humantime-serde = { workspace = true }
bytesize     = { workspace = true }
bon          = { workspace = true }
