[package]
name = "neuraos-wings"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Plugin/extension wings system for NeuraOS agents"

[dependencies]
neuraos-types = { path = "../neuraos-types" }
serde         = { workspace = true }
serde_json    = { workspace = true }
tokio         = { workspace = true }
anyhow        = { workspace = true }
async-trait   = { workspace = true }
tracing       = "0.1"

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
