[package]
name = "neuraos-wire"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "HTTP API layer (Axum) for the NeuraOS platform"

[dependencies]
neuraos-kernel = { path = "../neuraos-kernel" }
neuraos-types  = { path = "../neuraos-types" }
axum           = { workspace = true }
tokio          = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
anyhow         = { workspace = true }
tracing        = "0.1"

[dev-dependencies]
axum-test     = "0.5"
tokio         = { workspace = true, features = ["macros", "rt-multi-thread"] }
