[package]
name             = "neuraos-wire"
version.workspace          = true
edition.workspace          = true
rust-version.workspace     = true
authors.workspace          = true
license.workspace          = true
description      = "HTTP API layer (Axum) for the NeuraOS platform"

[dependencies]
neuraos-kernel = { path = "../neuraos-kernel" }
neuraos-types  = { path = "../neuraos-types" }
neuraos-config = { path = "../neuraos-config" }
axum           = { workspace = true }
axum-extra     = { workspace = true }
tower          = { workspace = true }
tower-http     = { workspace = true }
tokio          = { workspace = true }
tokio-stream   = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
tracing        = { workspace = true }
thiserror      = { workspace = true }
anyhow         = { workspace = true }
uuid           = { workspace = true }
chrono         = { workspace = true }

[dev-dependencies]
tokio          = { workspace = true, features = ["macros", "rt-multi-thread"] }
